Fix the blurry wysiwyg images

--- a/wp-content/themes/coral_alliance/scss/_layout.scss
+++ b/wp-content/themes/coral_alliance/scss/_layout.scss
@@ -4,7 +4,10 @@
 
 * { box-sizing: border-box; }
 
-img {max-width: 100%;}
+img {
+	max-width: 100%;
+	height: auto;
+}
 
 .container {
 	@include container();
